--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.app {
+    text-align: center;
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    font-size: 40px;
+    background-color: red;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    border-radius: 10px;
+    border-style: double;
+    border-color: white;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  input {
+    width: 200px;
+    height: 50px;
+    padding: 4px;
+    margin-right: 8px;
+    background-color: rgb(255, 255, 255);
   }
-  to {
-    transform: rotate(360deg);
+  
+  
+  ul {
+    list-style: none;
   }
+  
+  li {
+    margin: 15px;
+  }
+  
+  .delete-button {
+    font-size: 30px;
+    margin-left: 15px;
+  
+    border: none;
+    color: white;
+    border-radius: 30px;
+  
+    padding-top: 4px;
+    padding-bottom: 4px;
+  }
+button{
+    background-color: rgb(255, 255, 255);
+    border-style: double;
+    border-color: black;
+    border-radius: 5px;
+    border-width: 8px;
+
 }
